# RustWeb

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  shell_utils.sh
conf/: redis.toml
src/: main.rs
src/configs/: redis.rs
src/pkg/log/: log.rs
src/pkg/redis/: client.rs  kv.rs  lib.rs  mod.rs  redis.rs
src/pkg/telegram/: telegram.rs
src/routers/: mod.rs  product.rs  routers.rs
src/utils/: log.rs  mod.rs  utils.rs
