[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
chrono = "0.4"
once_cell = "1.20.2"
redis = "0.28.1"
notify = "8.0.0"
toml = "0.8.19"
